--- a/style.css
+++ b/style.css
@@ -10,21 +10,83 @@ body {
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
 }
-
+input,
+button {
+  outline: 0;
+}
+.content {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
 header#main-header {
+  height: 46px;
+  background: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
+header#main-header .content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 46px;
-  background: #fff;
+  height: 100%;
 }
-
 header#main-header nav ul {
   display: flex;
   list-style: none;
 }
 
 header#main-header nav ul li {
+  display: flex;
+  align-items: center;
   font-size: 13px;
+
+  font-weight: bold;
+
+  margin-left: 30px;
+}
+header#main-header nav ul li a {
+  text-decoration: none;
   color: #667580;
+}
+header#main-header nav ul li:first-child {
+  margin-left: 0;
+}
+
+header#main-header nav ul li img {
+  margin-right: 7px;
+}
+
+header#main-header div.side {
+  display: flex;
+}
+header#main-header div.side input {
+  width: 220px;
+  border: 1px solid #e6ecf0;
+  height: 34px;
+  padding: 0 30px 0 12px;
+  border-radius: 16px;
+  color: #667581;
+  font-size: 12px;
+  font-weight: 500;
+  background: #f5f8fa url("/images/search.svg") no-repeat 190px center;
+}
+header#main-header div.side img {
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  margin: 0 15px;
+}
+
+header#main-header div.side button {
+  background: #3bb9e3;
+  height: 34px;
+  width: 90px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #fff;
+  border-radius: 16px;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
