--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ header#main-header {
   height: 46px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1;
 }
 header#main-header .content {
   display: flex;
@@ -89,4 +91,15 @@ header#main-header div.side button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+div.banner {
+  height: 380px;
+  width: 100%;
+  background: #3bb9e3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: #fff;
 }
