--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
+  min-height: 1220px;
 }
 input,
 button {
@@ -170,4 +171,87 @@ div.bar .content .actions button {
   justify-content: center;
   cursor: pointer;
   margin-right: 20px;
+}
+
+div.wrapper-content {
+  display: flex;
+}
+
+div.wrapper-content aside.profile {
+  width: 260px;
+}
+div.wrapper-content aside.profile img.avatar {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  border: solid 5px white;
+  margin-top: -130px;
+}
+div.wrapper-content aside.profile h1 {
+  font-size: 21px;
+  color: #1f2226;
+  margin-top: 10px;
+}
+div.wrapper-content aside.profile span {
+  font-size: 14px;
+  color: #53626c;
+}
+div.wrapper-content aside.profile p {
+  font-size: 14px;
+  color: #1f2226;
+  margin-top: 15px;
+}
+div.wrapper-content aside.profile ul {
+  margin-top: 20px;
+  list-style: none;
+}
+div.wrapper-content aside.profile ul.list li {
+  color: #657786;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+}
+div.wrapper-content aside.profile ul.list li:first-child {
+  margin-top: 0;
+}
+div.wrapper-content aside.profile ul.list li img {
+  margin-right: 10px;
+}
+div.wrapper-content aside.profile .widget {
+  margin-top: 20px;
+}
+div.wrapper-content aside.profile .widget p {
+  color: #3bb9e3;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+div.wrapper-content aside.profile .widget p img {
+  margin-right: 5px;
+}
+div.wrapper-content aside.profile .followers ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+div.wrapper-content aside.profile .followers ul li {
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  background: #d0d5d9;
+  flex: 1 0 auto;
+  margin: 0 5px 10px 0;
+}
+div.wrapper-content aside.profile .images ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+div.wrapper-content aside.profile .images ul li {
+  width: 80px;
+  height: 80px;
+  border-radius: 8px;
+  background: #d0d5d9;
+  flex: 1 0 auto;
+  margin: 0 5px 5px 0;
 }
