--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ div.bar .content ul li strong {
 div.bar .content .actions {
   display: flex;
 }
-div.bar .content .actions button {
+.follow-button {
   background: #fff;
   height: 34px;
   width: 90px;
@@ -254,4 +254,105 @@ div.wrapper-content aside.profile .images ul li {
   background: #d0d5d9;
   flex: 1 0 auto;
   margin: 0 5px 5px 0;
+}
+div.wrapper-content .timeline {
+  flex: 1;
+  background: #fff;
+  margin: 10px;
+}
+div.wrapper-content aside.widgets {
+  width: 290px;
+  margin-top: 10px;
+}
+div.wrapper-content aside.widgets .widget {
+  background: #fff;
+  padding: 15px;
+}
+div.wrapper-content aside.widgets .widget .title {
+  display: flex;
+  align-items: baseline;
+}
+div.wrapper-content aside.widgets .widget .title strong {
+  font-size: 18px;
+  color: #1f2226;
+}
+div.wrapper-content aside.widgets .widget .title a {
+  color: #3bb9e3;
+  font-size: 12px;
+  text-decoration: none;
+  position: relative;
+  padding-left: 10px;
+}
+div.wrapper-content aside.widgets .widget .title a::before {
+  content: "";
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  background: #222;
+  position: absolute;
+  left: 4px;
+  top: 6px;
+}
+div.wrapper-content aside.widgets .follow ul {
+  list-style: none;
+  margin-top: 10px;
+}
+div.wrapper-content aside.widgets .follow ul li {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccd6dd;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+div.wrapper-content aside.widgets .follow ul li:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border: 0;
+}
+div.wrapper-content aside.widgets .follow ul li .follower-profile {
+  display: flex;
+  align-items: center;
+}
+div.wrapper-content aside.widgets .follow ul li .follower-profile img {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+div.wrapper-content aside.widgets .follow ul li .follower-profile .info {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+}
+div.wrapper-content aside.widgets .follow ul li .follower-profile .info strong {
+  font-size: 14px;
+  color: #1f2226;
+}
+div.wrapper-content
+  aside.widgets
+  .follow
+  ul
+  li
+  .follower-profile
+  .info
+  strong
+  span {
+  font-weight: normal;
+  color: #9a9a9a;
+}
+div.wrapper-content
+  aside.widgets
+  .follow
+  ul
+  li
+  .follower-profile
+  .info
+  .follow-button {
+  height: 27px;
+  margin-left: 0;
+  margin-top: 4px;
+}
+div.wrapper-content aside.widgets .follow ul li > a {
+  color: #ccd6dd;
+  text-decoration: none;
+  font-size: 14px;
 }
