--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ header#main-header {
   height: 46px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-  position: relative;
+  position: fixed;
+  width: 100%;
   z-index: 1;
 }
 header#main-header .content {
@@ -186,6 +187,8 @@ div.bar .content > ul li:hover {
   justify-content: center;
   cursor: pointer;
   margin-right: 20px;
+  -webkit-transition: background 1s; /* For Safari 3.1 to 6.0 */
+  transition: background 0.5s;
 }
 .follow-button:hover {
   background: #3bb9e3;
@@ -337,7 +340,7 @@ div.wrapper-content .timeline ul.tweets li .actions a {
   text-decoration: none;
   color: #667580;
   font-weight: bold;
-  font-size: 12px; 
+  font-size: 12px;
   margin-left: 30px;
 }
 div.wrapper-content .timeline ul.tweets li .actions a:first-child {
